doc fixes (#70)
* docs: react-native getting-started

* docs: react-native getting-started

* docs: remove deprecated config value wakePhrase from docs

* docs: improvements for react native docs

* docs: remove inadverntent path additions

* docs: react native ios appdelegate doc fix

* docs: note react native version in getting-started

* docs: fix incorrect iOS cookbook code